# aoc_2022_hs

./: DayGen.py  aoc2022-hs.cabal
app/: Main.hs
app/Day01/: Ex.hs
app/Day02/: Ex.hs
app/Day03/: Ex.hs
app/Day04/: Ex.hs
app/Day05/: Ex.hs
app/Day06/: Ex.hs
app/Day07/: Ex.hs
app/Day08/: Ex.hs
app/Day09/: Ex.hs
app/Day10/: Ex.hs
app/Day11/: Ex.hs
app/Day12/: Ex.hs
app/Day13/: Ex.hs
app/Day14/: Ex.hs
app/Day15/: Ex.hs
app/Day16/: Ex.hs
app/Day17/: Ex.hs
app/Day18/: Ex.hs
app/Day19/: Ex.hs
app/Day20/: Ex.hs
app/Day21/: Ex.hs
app/Day22/: Ex.hs
app/Day23/: Ex.hs
app/Day24/: Ex.hs
app/Day25/: Ex.hs
