cabal-version:      2.4
name:               aoc2022-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Strackeror
maintainer:         rremilavergne@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2022-hs
    main-is:          Main.hs

    default-extensions:
        RecordWildCards
    -- Modules included in this executable, other than Main.
    other-modules:
        Day01.Ex
        Day02.Ex
        Day03.Ex
        Day04.Ex
        Day05.Ex
        Day06.Ex
        Day07.Ex
        Day08.Ex
        Day09.Ex
        Day10.Ex
        Day11.Ex
        Day12.Ex
        Day13.Ex
        Day14.Ex
        Day15.Ex
        Day16.Ex
        Day17.Ex
        Day18.Ex
        Day19.Ex
        Day20.Ex
        Day21.Ex
        Day22.Ex
        Day23.Ex
        Day24.Ex
        Day25.Ex

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16,
        containers,
        split,
        parsec,
    hs-source-dirs:
        app
    default-language: Haskell2010
